ProductFormatService